Fixed About Section FlexWrap

--- a/src/app.css
+++ b/src/app.css
@@ -151,27 +151,35 @@ section {
 .flex2 {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap; /* Allow wrap on smaller screens */
+  flex-wrap: nowrap; /* Allow wrap on smaller screens */
   justify-content: space-between;
   gap: 2rem; /* Reduce gap so they don’t overflow */
-  padding: var(--spacing6);
+  padding: var(--spacing5);
 }
 
 .flex2 > div {
   display: flex;
   flex-direction: column;
+  flex: 1 1 auto;
+  gap: 0.3rem;
 }
-.flex2 > div p {
-  margin: 1rem 0; /* small vertical margin */
+
+.content {
+  margin: 0;
+  line-height: 1.2rem; /* adjust as needed */
 }
 
 .flex3 {
+  padding: var(--spacing6);
+  text-align: center;
+}
+
+.flex3 > div {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap; /* Allow wrap on smaller screens */
-  text-align: center;
+  gap: 1rem;
   justify-content: space-between;
-  padding: var(--spacing6);
+  align-items: center;
 }
 
 .reverse {
